# filterx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  justfile  netlify.toml  pyproject.toml
.github/workflows/: release-pypi.yml  release.yml  static.yml
docs/: pnpm-lock.yaml  rspress.config.ts
docs/docs/: _meta.json  index.mdx  manual.mdx
docs/docs/function/: _meta.json  column.md  index.mdx  operator.md  row.md  sequence.md  str.md
python/filterx/: __main__.py
spec/: fasta.url.txt  fastq.url.txt
src/: error.rs  hint.rs  lib.rs  main.rs  util.rs
src/cmd/: args.rs  cli.rs  csv.rs  fasta.rs  fastq.rs  gxf.rs  main.rs  mod.rs  sam.rs  vcf.rs
src/engine/: ast.rs  mod.rs  value.rs  vm.rs
src/engine/eval/: assign.rs  mod.rs  name.rs  ops.rs
src/engine/eval/call/: call.rs  mod.rs
src/engine/eval/call/builtin/: Alias.rs  abs.rs  alias.rs  cast.rs  col.rs  drop.rs  drop_null.rs  dup.rs  fill.rs  gc.rs  head.rs  header.rs  is_na.rs  is_null.rs  len.rs  limit.rs  lower.rs  mod.rs  print.rs  rename.rs  replace.rs  rev.rs  revcomp.rs  row.rs  select.rs  slice.rs  sort.rs  strip.rs  tail.rs  to_fasta.rs  to_fastq.rs  upper.rs
src/filterx/: Cargo.toml
src/filterx/src/: args.rs  cli.rs  info.rs  lib.rs  main.rs
src/filterx/src/files/: csv.rs  fasta.rs  fastq.rs  gxf.rs  mod.rs  sam.rs  vcf.rs
src/filterx_core/: Cargo.toml
src/filterx_core/src/: error.rs  lib.rs  reader.rs  sep.rs  thread_size.rs  util.rs  value.rs  writer.rs
src/filterx_engine/: Cargo.toml
src/filterx_engine/src/: ast.rs  engine_macro.rs  eval_macro.rs  lib.rs  util.rs  vm.rs
src/filterx_engine/src/eval/: assign.rs  mod.rs  name.rs  ops.rs
src/filterx_engine/src/eval/call/: call.rs  functions.rs  mod.rs
src/filterx_engine/src/eval/call/builtin/: mod.rs
src/filterx_engine/src/eval/call/builtin/column/: alias.rs  cast.rs  col.rs  del.rs  drop.rs  drop_null.rs  dup.rs  fill.rs  header.rs  is_na.rs  is_null.rs  mod.rs  occ.rs  print.rs  rename.rs  rm.rs  select.rs  sort.rs
src/filterx_engine/src/eval/call/builtin/column/doc/: alias.md  cast.md  col.md  del.md  drop_null.md  dup.md  fill.md  header.md  is_null.md  occ.md  print.md  rename.md  rm.md  select.md  sort.md
src/filterx_engine/src/eval/call/builtin/number/: abs.rs  mod.rs
src/filterx_engine/src/eval/call/builtin/number/doc/: abs.md
src/filterx_engine/src/eval/call/builtin/row/: head.rs  limit.rs  mod.rs  tail.rs
src/filterx_engine/src/eval/call/builtin/row/doc/: head.md  limit.md  tail.md
src/filterx_engine/src/eval/call/builtin/sequence/: gc.rs  hpc.rs  mod.rs  phred.rs  qual.rs  revcomp.rs  to_fasta.rs  to_fastq.rs  width.rs
src/filterx_engine/src/eval/call/builtin/sequence/doc/: gc.md  hpc.md  phred.md  qual.md  revcomp.md  to_fasta.md  to_fastq.md  width.md
src/filterx_engine/src/eval/call/builtin/string/: extract.rs  len.rs  lower.rs  mod.rs  replace.rs  rev.rs  slice.rs  strip.rs  trim.rs  upper.rs  width.rs
src/filterx_engine/src/eval/call/builtin/string/doc/: extract.md  len.md  lower.md  replace.md  rev.md  slice.md  strip.md  trim.md  upper.md
src/filterx_engine/src/eval_vm/: assign.rs  mod.rs  name.rs  ops.rs
src/filterx_engine/src/eval_vm/call/: call.rs
src/filterx_engine/src/eval_vm/call/builtin/: abs.rs  alias.rs  cast.rs  col.rs  drop_null.rs  dup.rs  fill.rs  gc.rs  header.rs  len.rs  limit.rs  lower.rs  mod.rs  nr.rs  print.rs  rename.rs  replace.rs  rev.rs  revcomp.rs  select.rs  slice.rs  strip.rs  tail.rs  to_fasta.rs  to_fastq.rs  upper.rs
src/filterx_info/: Cargo.toml
src/filterx_info/src/: lib.rs  parse.rs  render.rs
src/filterx_source/: Cargo.toml
src/filterx_source/src/: dataframe.rs  lib.rs  source.rs
src/filterx_source/src/block/: mod.rs  reader.rs  table_like.rs
src/filterx_source/src/block/fastx/: fasta.rs  fastq.rs  mod.rs
src/source/: dataframe.rs  mod.rs  source.rs
src/source/block/: fasta.rs  fastq.rs  mod.rs  reader.rs  record.rs  table_like.rs
src/source/block/fastx/: fasta.rs  fastq.rs  mod.rs
test_data/: test.csv
test_data/csv/: cast.csv  col.csv  example.csv  is_na.csv  replace.csv  sort.csv  sort2.csv  test.csv
test_data/fasta/: 1.fa  slice.fa  strip.fa
test_data/fastq/: 1.fq  print.fq  test.fq
test_data/gxf/: test.gff3
