[package]
name = "filterx"
version = "0.1.0"
edition = "2021"

[workspace.package]
version = "0.0.1"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
polars = { version = "0.43.1", default-features = false, features = [
    "lazy",
    "csv",
    "strings",
    "string_reverse",
    "concat_str",
    "regex",
    "semi_anti_join",
    "streaming",
    "cum_agg",
    "avx512",
] }
rustpython-parser = "0.4.0"
thiserror = "1.0.63"
flate2 = { version = "1.0.33", features = ["zlib-rs"] }
regex = "1.11.1"
colored = "2.1.0"
lazy_static = "1.5.0"


[profile.dev]
opt-level = 0


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
