[package]
name = "filterx_core"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "The core library for filterx"

[dependencies]
polars = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustpython-parser = { workspace = true }
flate2 = { workspace = true }
gzp = { workspace = true }
num_cpus = { workspace = true }
clap = { workspace = true }
memchr = { workspace = true }
