[package]
name = "filterx_engine"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
polars = { workspace = true }
rustpython-parser = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
filterx_core = { workspace = true }
filterx_source = { workspace = true }
clap = { workspace = true }
