[package]
name = "filterx_info"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "The builtin function documentation library for filterx"



[dependencies]
filterx_core = { workspace = true }
markdown = { workspace = true }
colored = { workspace = true }
memchr = { workspace = true }
