[package]
name = "filterx_source"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = "The source library for filterx"


[dependencies]
flate2 = { workspace = true }
polars = { workspace = true }
regex = { workspace = true }
filterx_core = { workspace = true }
clap = { workspace = true }
memchr = { workspace = true }
